remove unecessary development code

--- a/about.html
+++ b/about.html
@@ -64,18 +64,24 @@
                 <!-- <h2>Here are more about me.</h2> -->
                 <h1>what I do</h1>
                 <ul class="whatIdo">
-                    <li><span>Fontend Developement </span> Turn UI/UX design
-                        into an actual
-                        web or app </li>
-                    <li><span>Backend Developement </span> Develop back-end
-                        logic to support
-                        web/app with data and real-time interaction.</li>
-                    <li><span>Data processing </span> Data processing:
-                        Analysing,
-                        cleaning and visualising row
-                        data. </li>
-                    <li><span>Other Interests </span> I am also interested in
-                        history, culture and economy.
+                    <li>
+                        <span>Fontend Developement </span>
+                        + Turn UI/UX design into an actual web or app
+                    </li>
+                    <li>
+                        <span>Backend Developement </span>
+                        + Develop back-end
+                        + logic to support web/app with data and real-time
+                        interaction.
+                    </li>
+                    <li>
+                        <span>Data processing </span>
+                        + Data processing, Analysing, cleaning and visualising
+                        row data.
+                    </li>
+                    <li>
+                        <span>Other Interests </span>
+                        + I am also interested in history, culture and economy.
                     </li>
                 </ul>
             </div>
@@ -186,54 +192,11 @@
                     </div>
                 </div>
 
-                <!-- <ul class="skills-list">
-                    <li>First step</li>
-                    <li>second step</li>
-                    <li>Third step </li>
-                    <li>CarerFoundry web developent course</li>
-                </ul> -->
             </div>
-            <!-- <div class="table-container">
-                <h2>Skills and Expriences</h2>
-                <table>
-                    <caption> Table 1. My Web developent Skills and
-                        Expriences
-                    </caption>
-                    <thead>
-                        <tr>
-                            <th scope="col">Skills</th>
-                            <th scope="col">Experience Time</th>
-                            <th scope="col">Expertise level</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td> HTMl</td>
-                            <td>1 year</td>
-                            <td>Intermidate</td>
-                        </tr>
-                        <tr>
-                            <td>CSS</td>
-                            <td>1 year</td>
-                            <td>Intermidate</td>
-                        </tr>
-                        <tr>
-                            <td>Javascript</td>
-                            <td> 0.5 year</td>
-                            <td>beginner</td>
-                        </tr>
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="3">I learning more..</td>
-                        </tr>
-                    </tfoot>
-                </table>
-            </div> -->
             <a href="file/cv.pdf" class="button" download> Download my
                 CV</a>
 
-            <!-- Berline svg -->
+            <!-- Berline svg just for fun -->
             <svg id="about-picture" xmlns="http://www.w3.org/2000/svg"
                 class="berlin-illustration" height="auto" length="auto"
                 viewBox="0 0 700 505"
