refactor index navigation bar

--- a/index.html
+++ b/index.html
@@ -13,30 +13,31 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="css/style.production.css">
+    <!-- <link rel="stylesheet" href="css/style.production.css"> -->
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
 <body>
     <!-- This the header part-->
-    <header class="page-header">
-        <img src="img/logo-202x48.png"
-            alt=" Personal logo of Mezekr, a text logo with my name">
+    <header>
+        <a href="#" class="logo-holder">
+            <div class="logo">MW</div>
+            <div class="logo-text">Mezekr W.</div>
+        </a>
+
         <nav class="main-navigation">
-            <ul role="menubar" class="navigation-list">
+            <ul role="menubar">
                 <li role="presentation">
-                    <a href="index.html" role="menuitem"
-                        class="navigation-list_item navigation-list_item--active">Home</a>
+                    <a href="#" role="menuitem">Home</a>
                 </li>
                 <li role="presentation">
-                    <a href="about.html" role="menuitem"
-                        class="navigation-list_item">About</a>
+                    <a href="#" role="menuitem">about</a>
                 </li>
-                <li role="presentation"><a href="contact.html" role="menuitem"
-                        class="navigation-list_item">Contact</a>
+                <li role="presentation"><a href="#" role="menuitem">Work</a>
                 </li>
-                <li role="presentation"><a href="work.html" role="menuitem"
-                        class="navigation-list_item">Work</a>
+                <li role="presentation"><a href="#" role="menuitem"
+                        class="button">Contact me</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +54,28 @@
                 <p>
                     Leverage Full-Stack Web Development Capabilities
                     to Bring Ideas to the Actual Web with Precision!
+
                 </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dignissimos porro officiis est voluptas obcaecati deserunt
+                    consectetur vero corrupti laboriosam delectus, aliquam
+                    numquam nemo velit recusandae quaerat ad nesciunt tempora
+                    perferendis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dignissimos porro officiis est voluptas obcaecati deserunt
+                    consectetur vero corrupti laboriosam delectus, aliquam
+                    numquam nemo velit recusandae quaerat ad nesciunt tempora
+                    perferendis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dignissimos porro officiis est voluptas obcaecati deserunt
+                    consectetur vero corrupti laboriosam delectus, aliquam
+                    numquam nemo velit recusandae quaerat ad nesciunt tempora
+                    perferendis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Dignissimos porro officiis est voluptas obcaecati deserunt
+                    consectetur vero corrupti laboriosam delectus, aliquam
+                    numquam nemo velit recusandae quaerat ad nesciunt tempora
+                    perferendis.</p>
                 <a href="https://github.com/mezekr" target="_blank"
                     id="Check-my_work">Check out my
                     work</a>
@@ -66,6 +88,30 @@
         </section>
     </main>
     <!-- This is just example button -->
+
+    <!-- <div id="about">
+        <div class="about-me-container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="img/example-profile_photo-400x400.jpg "
+                        class="profile_portrait"
+                        alt="Mezekr profile portraitphotograph">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About me </h1>
+                    <p>
+                        I am a web developer from Eritrea living in Germany.
+                        <br>
+                        I am passionate about all new and cool web stuff.
+                        <br>
+                        I lone to learn about new web technologies and<br>
+                        playing as well as watching football.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div> -->
 
 
     <!-- This the footer part-->
