--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <!-- <link rel="stylesheet" href="css/style.production.css"> -->
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/scripts.js"></script>
 
 </head>
 
@@ -27,7 +28,7 @@
         </a>
 
         <nav class="main-navigation">
-            <ul role="menubar">
+            <ul role="menubar" id="navigation-menu">
                 <li role="presentation">
                     <a href="#" role="menuitem">Home</a>
                 </li>
@@ -40,6 +41,14 @@
                         class="button">Contact me</a>
                 </li>
             </ul>
+            <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
+                <svg class="w-6 h-6 text-gray-800 dark:text-white"
+                    aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                    width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round"
+                        stroke-width="2" d="M5 7h14M5 12h14M5 17h10" />
+                </svg>
+            </a>
         </nav>
     </header>
 
