refactor the hero section of the page

--- a/index.html
+++ b/index.html
@@ -54,87 +54,42 @@
 
     <!-- This the main part-->
     <main>
-        <section class="profile">
-            <div class="profile-text">
-                <h1>Hi, I'm Mezekr</h1>
-                <h2> I am <span>a Full Stack Web Developer</span> based in
-                    Germany.
-                </h2>
-                <p>
-                    Leverage Full-Stack Web Development Capabilities
-                    to Bring Ideas to the Actual Web with Precision!
+        <section class="hero container">
+            <div class="hero-blue">
+                <div>
+                    <h1> <small>Hi, I'm </small>
+                        Mezekr w.
+                    </h1>
+                    <p>I am <span>a Full Stack Web Developer</span> based in
+                        Germany.
+                        Leverage Full-Stack Web Development Capabilities
+                        to Bring Ideas to the Actual Web with Precision!
+                        <span>I am interested in AI </span>
 
-                </p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dignissimos porro officiis est voluptas obcaecati deserunt
-                    consectetur vero corrupti laboriosam delectus, aliquam
-                    numquam nemo velit recusandae quaerat ad nesciunt tempora
-                    perferendis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dignissimos porro officiis est voluptas obcaecati deserunt
-                    consectetur vero corrupti laboriosam delectus, aliquam
-                    numquam nemo velit recusandae quaerat ad nesciunt tempora
-                    perferendis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dignissimos porro officiis est voluptas obcaecati deserunt
-                    consectetur vero corrupti laboriosam delectus, aliquam
-                    numquam nemo velit recusandae quaerat ad nesciunt tempora
-                    perferendis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Dignissimos porro officiis est voluptas obcaecati deserunt
-                    consectetur vero corrupti laboriosam delectus, aliquam
-                    numquam nemo velit recusandae quaerat ad nesciunt tempora
-                    perferendis.</p>
-                <a href="https://github.com/mezekr" target="_blank"
-                    id="Check-my_work">Check out my
-                    work</a>
+                    </p>
+                    <div class="call-to-action">
+                        <a href="#" target="_blank" class="button black">
+                            View Resume</a>
+                        <a href="#" target="_blank" class="button white">
+                            Contact me</a>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://github.com/" target="_blank">
+                            <img src="img/github_icon.svg" alt="github icon">
+                        </a>
+                        <a href="https://www.linkedin.com/" target="_blank">
+                            <img src="img/linkedin_icon.svg" alt="linked icon">
+                        </a>
+                    </div>
+
+                </div>
             </div>
-            <div>
+            <div class="hero-yellow">
                 <img src="img/example-profile_photo-400x400.jpg "
-                    class="profile_portrait"
-                    alt="Mezekr profile portraitphotograph">
+                    alt="Mezekr profile portraitphotograph" width="100%">
             </div>
         </section>
     </main>
-    <!-- This is just example button -->
-
-    <!-- <div id="about">
-        <div class="about-me-container">
-            <div class="row">
-                <div class="about-col-1">
-                    <img src="img/example-profile_photo-400x400.jpg "
-                        class="profile_portrait"
-                        alt="Mezekr profile portraitphotograph">
-                </div>
-                <div class="about-col-2">
-                    <h1 class="sub-title">About me </h1>
-                    <p>
-                        I am a web developer from Eritrea living in Germany.
-                        <br>
-                        I am passionate about all new and cool web stuff.
-                        <br>
-                        I lone to learn about new web technologies and<br>
-                        playing as well as watching football.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div> -->
-
-
-    <!-- This the footer part-->
-    <footer class="page-footer">
-        <p>Follow me on </p>
-        <div class="social-media">
-            <a href="https://github.com/" target="_blank">
-                <img src="img/github_icon.svg" alt="github icon">
-            </a>
-            <a href="https://www.linkedin.com/" target="_blank">
-                <img src="img/linkedin_icon.svg" alt="linked icon">
-            </a>
-        </div>
-    </footer>
 </body>
 
 </html>
