update hero section contents

--- a/index.html
+++ b/index.html
@@ -60,11 +60,17 @@
                     <h1> <small>Hi, I'm </small>
                         Mezekr w.
                     </h1>
-                    <p>I am <span>a Full Stack Web Developer</span> based in
+                    <p><small>Full Stack Web Developer</small> based in
                         Germany.
-                        Leverage Full-Stack Web Development Capabilities
-                        to Bring Ideas to the Actual Web with Precision!
-                        <span>I am interested in AI </span>
+                        <span>Leverage Full-Stack Web Development Capabilities
+                            to Bring Ideas to the Actual Web with
+                            Precision!</span>
+                        <span>I am interested in AI Lorem ipsum dolor sit amet
+                            consectetur adipisicing elit. Praesentium, odio
+                            tempora, ratione dolores necessitatibus incidunt
+                            recusandae iure tenetur iste soluta laboriosam!
+                            Debitis, sed officiis consequatur animi iusto
+                            assumenda cumque eius? </span>
 
                     </p>
                     <div class="call-to-action">
