--- a/index.html
+++ b/index.html
@@ -95,6 +95,46 @@
                     alt="Mezekr profile portraitphotograph" width="100%">
             </div>
         </section>
+        <section class="skills container">
+            <h2>
+                <small> About me</small>
+                Skills
+            </h2>
+            <div class="holder-blue">
+                <div class="left-column">
+                    <h3>Frontend</h3>
+                    <ul>
+                        <li>Html</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>React</li>
+                        <li>Angular</li>
+                        <li>Vue</li>
+                    </ul>
+                    <h3>Backend</h3>
+                    <ul>
+                        <li>Node</li>
+                        <li>Express</li>
+                        <li>React</li>
+                        <li>Python</li>
+                    </ul>
+                </div>
+
+                <div class="right-column">
+                    <h3>Abit about me</h3>
+                    <p>Hi I am Mezekr.... Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Aliquam consectetur iusto voluptatibus
+                        ad, dolorem esse quibusdam quidem a laborum! Porro ad,
+                        velit in obcaecati cum voluptatum tempora dicta at
+                        dolore.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Repellat, quam laborum! Alias, minus reiciendis! Dolores
+                        repudiandae magni ipsa deleniti autem placeat
+                        temporibus, ratione eum similique quos rem commodi ipsam
+                        cum!</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
