add work exprience and projects section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
     <!-- This the main part-->
     <main>
+        <!-- hero section of main page -->
         <section class="hero container">
             <div class="hero-blue">
                 <div>
@@ -95,6 +96,7 @@
                     alt="Mezekr profile portraitphotograph" width="100%">
             </div>
         </section>
+        <!-- aboutme skills section of main page -->
         <section class="skills container">
             <h2>
                 <small> About me</small>
@@ -135,6 +137,88 @@
                 </div>
             </div>
         </section>
+        <!-- work experience/ projects section of main page -->
+        <section class="work-experience container">
+            <h2>
+                <small>Recent</small>
+                Work Experience
+            </h2>
+            <div class="jobs">
+                <article>
+                    <figure>
+                        <div>
+                            <img src="img/projects/myflix_movies_page.png"
+                                alt="MeziFlix Angular app" width="100%">
+                            <figcaption>myflix movies</figcaption>
+                        </div>
+                    </figure>
+                    <h3>myflix movies</h3>
+                    <p>This is exmple of the project desicription...
+                    </p>
+                    <div class="teck-stack">
+                        <h4>Teck stack</h4>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Angular</li>
+                            <li>Vue</li>
+                        </ul>
+                    </div>
+
+                </article>
+                <article>
+                    <figure>
+                        <div>
+                            <img src="img/projects/Pokedex-js-app.png"
+                                alt="Pokedex JavaScript app" width="100%">
+                            <figcaption>Pokedex JavaScript</figcaption>
+                        </div>
+                    </figure>
+                    <h3>Pokedex JavaScript</h3>
+                    <p>This is exmple of the project desicription...
+                    </p>
+                    <div class="teck-stack">
+                        <h4>Teck stack</h4>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Angular</li>
+                            <li>Vue</li>
+                        </ul>
+                    </div>
+                </article>
+                <article>
+                    <figure>
+                        <div>
+                            <img src="img/projects/MeziFlix_React_app.png"
+                                alt="MeziFlix React app" width="100%">
+                            <figcaption>MeziFlix React app</figcaption>
+                        </div>
+                    </figure>
+                    <h3>MeziFlix</h3>
+                    <p>This is exmple of the project desicription...This is
+                        exmple of the project desicription
+                    </p>
+                    <div class="teck-stack">
+                        <h4>Teck stack</h4>
+                        <ul>
+                            <li>Html</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>React</li>
+                            <li>Angular</li>
+                            <li>Vue</li>
+                        </ul>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+
     </main>
 </body>
 
