--- a/index.html
+++ b/index.html
@@ -218,7 +218,79 @@
             </div>
         </section>
 
+        <!-- contact me section of main page -->
+        <section class="contacts container">
+            <h2>
+                <small>Contacts</small>
+                Contact me
+            </h2>
+            <div class="contact-me">
 
+                <div class="contact-links">
+                    <div class="contact-text">
+                        <p>
+                            I'm really grateful that you took the time to visit
+                            my portfolio. If there's anything else I can help
+                            you
+                            with or you'd like to get in touch, you will find me
+                            in linkedin and GitHub useing the links below. Or
+                            just use the form to send me a direct message and
+                            I'll get back to you as
+                            soon as I can.
+                        </p>
+                    </div>
+                    <div class="social-links">
+                        <a href="https://github.com/" target="_blank">
+                            <img src="img/github_icon.svg" alt="github icon">
+                        </a>
+                        <a href="https://www.linkedin.com/" target="_blank">
+                            <img src="img/linkedin_icon.svg" alt="linked icon">
+                        </a>
+                    </div>
+                    <div class="call-to-action">
+                        <a href="#" target="_blank" class="button white">
+                            Contact me</a>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <h3>Send me a message</h3>
+                    <div class="form-container">
+                        <form action="https://api.web3forms.com/submit"
+                            method="POST" class="form">
+
+                            <input type="hidden" name="access_key"
+                                value="c594d040-cfcc-45db-a35d-3d094928c1fa">
+                            <!-- Email notifications messages     -->
+                            <input type="hidden" name="from_name"
+                                value="From my Portfolio Website">
+
+                            <!--  for message subject -->
+                            <input type="hidden" name="subject">
+
+                            <input type="text" name="name"
+                                placeholder="Your Name" required class="input">
+                            <input type="email" name="email"
+                                placeholder="Your Email" required id="mail"
+                                class="input">
+                            <input type="text" name="subject"
+                                placeholder="Subject" class="input">
+                            <textarea name="message"
+                                placeholder="Type your message" rows="20"
+                                cols="40" required class="textarea"></textarea>
+
+                            <input type="hidden" name="redirect"
+                                value="https://web3forms.com/success">
+
+                            <div class="button-container">
+                                <button type="submit" class="send-button">
+                                    Send Message
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
