add CSS styles to the contact me section

--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
                             my portfolio. If there's anything else I can help
                             you
                             with or you'd like to get in touch, you will find me
-                            in linkedin and GitHub useing the links below. Or
+                            in linkedin and GitHub useing the links below. <br>
+                            Or
                             just use the form to send me a direct message and
                             I'll get back to you as
                             soon as I can.
