--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
                     <a href="#" role="menuitem">Home</a>
                 </li>
                 <li role="presentation">
-                    <a href="#" role="menuitem">about</a>
+                    <a href="#about" role="menuitem">about</a>
                 </li>
-                <li role="presentation"><a href="#" role="menuitem">Work</a>
+                <li role="presentation"><a href="#work" role="menuitem">Work</a>
                 </li>
-                <li role="presentation"><a href="#" role="menuitem"
-                        class="button">Contact me</a>
+                <li role="presentation"><a href="#contact"
+                        role="menuitem">Contact</a>
+                </li>
+                <li role="presentation"><a href="mailto:mezi.edu@tuta.io"
+                        role="menuitem" class="button">Contact me</a>
                 </li>
             </ul>
             <a href="#" class="mobile-toggle" onClick="toggleMobileMenu();">
@@ -75,9 +78,11 @@
 
                     </p>
                     <div class="call-to-action">
-                        <a href="#" target="_blank" class="button black">
+                        <a href="./img/Mezekr-Weldu-Resume.pdf" target="_blank"
+                            class="button black">
                             View Resume</a>
-                        <a href="#" target="_blank" class="button white">
+                        <a href="mailto:mezi.edu@tuta.io" target="_blank"
+                            class="button white">
                             Contact me</a>
                     </div>
                     <div class="social-links">
@@ -97,7 +102,7 @@
             </div>
         </section>
         <!-- aboutme skills section of main page -->
-        <section class="skills container">
+        <section id="about" class="skills container">
             <h2>
                 <small> About me</small>
                 Skills
@@ -105,6 +110,7 @@
             <div class="holder-blue">
                 <div class="left-column">
                     <h3>Frontend</h3>
+                    <p>+ Turn UI/UX design into an actual web or app</p>
                     <ul>
                         <li>Html</li>
                         <li>CSS</li>
@@ -114,11 +120,25 @@
                         <li>Vue</li>
                     </ul>
                     <h3>Backend</h3>
+                    <p>+ Develop back-end <br>
+                        + logic to support web/app with data and real-time
+                        interaction.</p>
                     <ul>
                         <li>Node</li>
                         <li>Express</li>
                         <li>React</li>
                         <li>Python</li>
+                    </ul>
+                    <h3>Data processing</h3>
+                    <p>+ Data processing, Analysing, cleaning and visualising
+                        row data.
+                    </p>
+                    <ul>
+                        <li>Python</li>
+                        <li>Numpy</li>
+                        <li>Plotly</li>
+                        <li>Matplotlip</li>
+                        <li>Scipy</li>
                     </ul>
                 </div>
 
@@ -138,7 +158,7 @@
             </div>
         </section>
         <!-- work experience/ projects section of main page -->
-        <section class="work-experience container">
+        <section id="work" class="work-experience container">
             <h2>
                 <small>Recent</small>
                 Work Experience
@@ -219,7 +239,7 @@
         </section>
 
         <!-- contact me section of main page -->
-        <section class="contacts container">
+        <section id="contact" class="contacts container">
             <h2>
                 <small>Contacts</small>
                 Contact me
@@ -251,6 +271,9 @@
                     <div class="call-to-action">
                         <a href="#" target="_blank" class="button white">
                             Contact me</a>
+                        <a href="./img/Mezekr-Weldu-Resume.pdf" target="_blank"
+                            class="button black">
+                            Download Resume</a>
                     </div>
                 </div>
                 <div class="contact-form">
