add exprience and education sections

--- a/index.html
+++ b/index.html
@@ -143,17 +143,40 @@
                 </div>
 
                 <div class="right-column">
-                    <h3>Abit about me</h3>
+                    <h3>A bit about me</h3>
                     <p>Hi I am Mezekr.... Lorem ipsum dolor sit amet consectetur
                         adipisicing elit. Aliquam consectetur iusto voluptatibus
                         ad, dolorem esse quibusdam quidem a laborum! Porro ad,
                         velit in obcaecati cum voluptatum tempora dicta at
                         dolore.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Repellat, quam laborum! Alias, minus reiciendis! Dolores
-                        repudiandae magni ipsa deleniti autem placeat
-                        temporibus, ratione eum similique quos rem commodi ipsam
-                        cum!</p>
+                    <div class="career experience">
+                        <h3>Experience</h3>
+                        <div class="contents">
+                            <ul>
+                                <li><span>2023</span> Software Developer at
+                                    Ferschu GMBH</li>
+                                <li><span>2020 - 2022</span>Student job as
+                                    Reacher assitant at TUBAF</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class=" career education">
+                        <h3>Education</h3>
+                        <div class="contents">
+                            <ul>
+                                <li><span>2023 - 2024</span> Full-stack
+                                    development certification upskilling coures
+                                    at CarreerFoundry</li>
+                                <li><span>2019 - 2022</span>Masters in
+                                    Computer Science from TU Bergacdamiey
+                                    freiberg</li>
+                                <li><span>2008 - 2013</span>BS in Comouter
+                                    Enginnerg from Eritrean Instutute of
+                                    enginering Mainefih</li>
+
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -161,7 +184,7 @@
         <section id="work" class="work-experience container">
             <h2>
                 <small>Recent</small>
-                Work Experience
+                Projects
             </h2>
             <div class="jobs">
                 <article>
